added admin privillage

--- a/inventory.ini
+++ b/inventory.ini
@@ -11,6 +11,7 @@ ansible_user=ec2-user
 ansible_ssh_private_key_file=~/.ssh/sept23.pem
 ansible_connection=ssh
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_become=yes
 
 ; [web:vars]
 ; ansible_user=john
@@ -30,17 +31,18 @@ ansible_user=ec2-user
 ansible_ssh_private_key_file=~/.ssh/sept23.pem
 ansible_connection=ssh
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_become=yes
 
 
-[mtn]
-mtn1   ansible_host=3.97.95.248
-mtn2   ansible_host=16.52.178.166
+; [mtn]
+; mtn1   ansible_host=3.97.95.248
+; mtn2   ansible_host=16.52.178.166
 
 
-[mtn:vars]
-ansible_user=ubuntu
-ansible_ssh_private_key_file=~/.ssh/sept23.pem
-ansible_connection=ssh
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+; [mtn:vars]
+; ansible_user=ubuntu
+; ansible_ssh_private_key_file=~/.ssh/sept23.pem
+; ansible_connection=ssh
+; ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
  
