--- a/07-deploy-users-with-their-public-keys.yaml
+++ b/07-deploy-users-with-their-public-keys.yaml
@@ -3,8 +3,8 @@
   hosts: all
   become: yes
   vars:
-    username: "john"
-    user_uid: 1020
+    username: "prof-admin"
+    user_uid: 1060
     user_shell: "/bin/bash"
     # Path to local public key file (relative to playbook or absolute path)
     public_key_file: "~/.ssh/id_ed25519.pub"
@@ -47,3 +47,9 @@
         owner: "{{ username }}"
         group: "{{ username }}"
         mode: '0600'
+    - name: Ensure admin user has sudo privileges
+      copy:
+        content: "{{ admin_user }} ALL=(ALL) NOPASSWD:ALL"
+        dest: "/etc/sudoers.d/{{ admin_user }}"
+        mode: '0440'
+        validate: 'visudo -cf %s'
