--- a/07-deploy-users-with-their-public-keys.yaml
+++ b/07-deploy-users-with-their-public-keys.yaml
@@ -49,7 +49,7 @@
         mode: '0600'
     - name: Ensure admin user has sudo privileges
       copy:
-        content: "{{ admin_user }} ALL=(ALL) NOPASSWD:ALL"
-        dest: "/etc/sudoers.d/{{ admin_user }}"
+        content: "{{ prof-admin}} ALL=(ALL) NOPASSWD:ALL"
+        dest: "/etc/sudoers.d/{{ prof-admin}}"
         mode: '0440'
         validate: 'visudo -cf %s'
