--- a/07-deploy-users-with-their-public-keys.yaml
+++ b/07-deploy-users-with-their-public-keys.yaml
@@ -4,7 +4,7 @@
   become: yes
   vars:
     username: "prof-admin"
-    user_uid: 1060
+    user_uid: 1065
     user_shell: "/bin/bash"
     # Path to local public key file (relative to playbook or absolute path)
     public_key_file: "~/.ssh/id_ed25519.pub"
@@ -33,12 +33,12 @@
         group: "{{ username }}"
         mode: '0700'
 
-    - name: Read local public key file
-      slurp:
-        src: "{{ public_key_file | expanduser }}"
-      register: public_key_content
-      delegate_to: localhost
-      run_once: true
+    # - name: Read local public key file
+    #   slurp:
+    #     src: "{{ public_key_file | expanduser }}"
+    #   register: public_key_content
+    #   delegate_to: localhost
+    #   run_once: true
 
     - name: Deploy public key to authorized_keys
       copy:
