--- a/10-deployusers.ssh-keys.yaml
+++ b/10-deployusers.ssh-keys.yaml
@@ -69,4 +69,9 @@
         regexp: "^#?PasswordAuthentication"
         line: "PasswordAuthentication no"
         state: present
-      notify: restart ssh
+      notify: restart sshd
+  handlers:
+    - name: restart sshd
+      systemd:
+        name: sshd
+        state: restarted
