--- a/10-deployusers.ssh-keys.yaml
+++ b/10-deployusers.ssh-keys.yaml
@@ -67,7 +67,7 @@
       lineinfile:
         path: "/etc/ssh/sshd_config"
         regexp: "^#?PasswordAuthentication"
-        line: "PasswordAuthentication no"
+        line: "PasswordAuthentication  yes"
         state: present
       notify: restart sshd
   handlers:
