made additional files

--- a/07-deploy-users-with-their-public-keys.yaml
+++ b/07-deploy-users-with-their-public-keys.yaml
@@ -3,7 +3,7 @@
   hosts: all
   become: yes
   vars:
-    username: "john"
+    username: "walson"
     user_uid: 1020
     user_shell: "/bin/bash"
     # Path to local public key file (relative to playbook or absolute path)
